--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@ var/
 wheels/
 share/python-wheels/
 *.egg-info/
+constants/
 .installed.cfg
 *.egg
 MANIFEST
@@ -170,4 +171,4 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 #Constatnts
-constants/
+constants.py
